# t3-gatekeeper-agent

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
agent/: .env.example  README.md  agent-card.json  package-lock.json  package.json
agent/src/: a2a-demo.mjs  a2a.mjs  agent-sd.mjs  agent.mjs  auth-check.mjs  erc8004-register.mjs  lib.mjs  revocation.mjs  selective-disclosure.mjs  setup.mjs  velocity-demo.mjs  web-bot-auth.mjs
agent/test/: a2a.test.mjs  crypto.test.mjs  edge-cases.test.mjs  revocation.test.mjs  web-bot-auth.test.mjs
gate-contract/: Cargo.toml  README.md
gate-contract/src/: gate.rs  lib.rs
gate-contract/wit/: world.wit
submission/: ADOPTIONS.md  BUG_01_bbs_verify_undefined.md  BUIDL_DESCRIPTION.md  DEMO_SCRIPT.md  FORM_ANSWERS_FILLED.md  REGISTRATION_ANSWERS.md  SUBMIT_CHECKLIST.md  TECH_DEEPDIVE.md  TRACK_B_BUG_REPORTS.md  TRACK_B_DORAHACKS.md  VERIFICATION.md
submission/demo-web/: .gitignore  README.md  package-lock.json  package.json  player.html  record.mjs  scenes.mjs
submission/logo/: logo.html
submission/voiceover/: README.md  generate-vo.ps1
t3-qa/: agent-full-flow.mjs  agent-registry-test.mjs  attestation-parse.mjs  auth-test.mjs  gate-deploy-invoke.mjs  http-probe-test.mjs  package.json  register-test.mjs  smoke-sd.mjs  smoke-vc-negative.cjs  smoke-vc.cjs  velocity-test.mjs  vp-verify-test.mjs
